// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-643198f6-1 ctGSjM undefined "
  >
    <span>
      button test
    </span>
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-643198f6-2 iSEuzf undefined "
  >
    <span>
      button test
    </span>
  </button>
</div>
`;
